--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,8 @@
 .custom-class-show-message:nth-child(1) {
   margin-top: 55px;
 }
+
+.background{
+  background: linear-gradient(#b1bbe9, #3422da);
+
+}
